fix: always use --add-opens= and not just --add-opens